--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "gulp-sass": "^1.3.3",
     "gulp-util": "^3.0.4",
     "gulp-watch": "^4.1.1",
+    "hint.css": "^1.3.5",
+    "jquery.scrollto": "^2.1.1",
     "node-static": "^0.7.6",
     "tiny-lr": "^0.1.5"
   },
