--- a/package.json
+++ b/package.json
@@ -10,23 +10,29 @@
   "author": "clay.schick@gmail.com",
   "license": "ISC",
   "dependencies": {
+    "accepts": "^1.2.12",
     "connect-livereload": "^0.5.3",
+    "ejs": "^2.3.3",
     "express": "^4.12.0",
+    "express-useragent": "^0.1.9",
     "gulp": "^3.8.11",
     "gulp-autoprefixer": "^2.1.0",
     "gulp-changed": "^1.1.1",
     "gulp-livereload": "^3.8.0",
     "gulp-load-plugins": "^0.8.1",
+    "gulp-minify-css": "^1.2.0",
     "gulp-notify": "^2.2.0",
     "gulp-open": "^0.3.2",
     "gulp-plumber": "^0.6.6",
     "gulp-sass": "^1.3.3",
+    "gulp-sourcemaps": "^1.5.2",
     "gulp-util": "^3.0.4",
     "gulp-watch": "^4.1.1",
     "hint.css": "^1.3.5",
     "jquery.scrollto": "^2.1.1",
     "node-static": "^0.7.6",
-    "tiny-lr": "^0.1.5"
+    "tiny-lr": "^0.1.5",
+    "vinyl-fs": "^1.0.0"
   },
   "devDependencies": {
     "jasmine-core": "^2.3.3",
